frontend/test/should_fail/simple_eval_006.grg
rule r
{
	modify {
		eval {
			exec([r]);
		}
	}
}